# pinocchio-template

./: .gitignore  Cargo.toml  README.md  build.sh  test.sh
cli/: Cargo.toml
cli/src/: main.rs
integration_tests/: Cargo.toml
integration_tests/tests/: tests.rs
integration_tests/tests/fixtures/: fixture.rs
integration_tests/tests/turn_based_engine/: init_config.rs  mod.rs  tests.rs
programs/example_program/: Cargo.toml  run_tests.sh
programs/example_program/src/: errors.rs  lib.rs  utils.rs
programs/example_program/src/accounts/: config.rs  mod.rs
programs/example_program/src/instructions/: initialize_config.rs  mod.rs  update_config.rs
programs/turn-based-engine/src/: utils.rs
programs/turn-based-engine/src/accounts/: config.rs  mod.rs
programs/turn-based-engine/src/instructions/: initialize_config.rs
programs/turn-based-engine/tests/: test.rs
programs/turn_based_engine/: Cargo.toml
programs/turn_based_engine/src/: lib.rs
programs/turn_based_engine/src/accounts/: config.rs
programs/turn_based_engine/src/instructions/: initialize_config.rs  mod.rs  update_config.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
sdk/src/example_program/: mod.rs
sdk/src/turn_based_engine/: mod.rs
