[package]
name = "solarcade-xyz"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "programs/*",
]

[[bin]]
name = "solarcade-xyz-cli"
path = "cli/src/main.rs"

[workspace.dependencies]
pinocchio = "0.8.2"
pinocchio-system = "0.2.3"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
turn-based-engine = { path = "programs/turn-based-engine", version = "=0.1.0" }