[workspace]
members = [
    "programs/*",
    "integration_tests/",
    "sdk/"
]

[workspace.package]
name = "solarcade-xyz"
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
pinocchio = "0.8.2"
pinocchio-system = "0.2.3"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
turn-based-engine = { path = "programs/turn_based_engine", version = "=0.1.0" }
solarcade-xyz-sdk = { path = "sdk/", version = "=0.1.0" }
solana-account-decoder = "2.2"
solana-cli-config = "2.2"
solana-metrics = "2.2"
solana-program = "2.2"
solana-program-test = "2.2"
solana-sdk = "2.2"
solana-rpc-client = "2.2"
solana-rpc-client-api = "2.2"
solana-security-txt = "1.1.1"
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token = { version = "8.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "9.0", features = ["no-entrypoint"] }
syn = "2.0.72"
test-case = "3.3.1"
thiserror = "2.0"
tokio = { version = "1.36.0", features = ["full"] }